<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackLeatherJacket"

    tools:context="com.example.android.stationfinder.MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_input_format"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_go"
        android:padding="10dp"
        android:textAlignment="center"
        android:background="@drawable/rounded_border"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_test"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"

        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintRight_toLeftOf="parent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textView_input_rbl"
        android:background="@drawable/more_rounded_corners"
        app:layout_constraintBottom_toTopOf="@id/btn_go"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_rbl" />

    <!--AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownWidth = "200dp"
        android:id="@+id/actv_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_go"
        /-->

    <Button
        android:id="@+id/btn_go"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:background="@drawable/more_rounded_corners"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
