<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackLeatherJacket"
        tools:context="com.example.android.stationfinder.MenuActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_info"
        app:layout_constraintTop_toBottomOf="@id/btn_rbl"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logo"
        android:background="@drawable/rounded_border"
        android:text="@string/search_text"
        android:textAllCaps="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_rbl"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:background="@drawable/more_rounded_corners"
        android:text="@string/btn_rbl"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/lineSeperator"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        android:layout_marginBottom="100dp"
        />

    <View
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/lineSeperator"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_stations"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:background="@drawable/more_rounded_corners"
        android:text="@string/btn_station_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintRight_toLeftOf="@id/lineSeperator"
        app:layout_constraintBottom_toTopOf="parent"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="parent"
        android:id="@+id/logo"
        app:layout_constraintLeft_toRightOf="@id/lineSeperator"
        android:src="@drawable/fhtw_logo2"        />






    </android.support.constraint.ConstraintLayout>
