<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fhtw_blue">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/fhtw_blue"
        tools:context="com.example.android.stationfinder.MenuActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fhtw_grey"
            android:text="@string/search_text"
            android:textAlignment="center"
            android:padding="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tv_grey">

        </TextView>

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_rbl"
            android:background="@drawable/rounded_border"
            android:text="@string/search_text"
            android:textAllCaps="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingTop="80dp"
            android:paddingBottom="80dp"
            android:textStyle="bold"-->

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/lineSeperator"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent" />

        <Button
            android:id="@+id/btn_stations"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/more_rounded_corners"
            android:text="@string/btn_station_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="40dp"
            app:layout_constraintRight_toLeftOf="@id/lineSeperator"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/tv_grey" />

        <Button
            android:id="@+id/btn_rbl"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/more_rounded_corners"
            android:text="@string/btn_rbl"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="30dp"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/lineSeperator"
            app:layout_constraintBottom_toTopOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/tv_grey" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="parent"
            android:id="@+id/logo"
            app:layout_constraintRight_toLeftOf="parent"
            android:src="@drawable/fhtw_logo2" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>